# psychopy-tutorial

./: .gitignore  README.md  pyproject.toml
psychopy_bridge_tutorial/: main.ipynb  main.psyexp  main.py  main_lastrun.py  main_standalone.py
psychopy_bridge_tutorial/stim/: stim.csv
